tests/script_errors/script_without_newline/error.txt
Error: 
    1 | "string" + 1
      | ^^^^^^^^^^^^ The binary operation `+` is not defined for the type `string` and `integer`